# docker

pipeline/: Dockerfile  Ingestion.ipynb  Ingestion.py  Untitled.ipynb  ingestion.py  output_day_1.parquet  pipeline.py  pyproject.toml
